# whatsapp-stream

./: .gitignore  FIX_DEPENDENCIES.md  LICENSE  README.md  SETUP_GUIDE.md  audio.py  csv_manager.py  doc-generator.py  download-reels.py  environment.yml  logger.py  main.py  main_reels_pipeline.py  pdf_generator.py  pyproject.toml  rag_module.py  requirements.txt  scraper-reels.py  video-to-audio.py  video.py  webdriver-download-test.ipynb  youtube_uploader.py
indexes/faiss_COMPRANDO_RELÓGIOS/: index.faiss  index.pkl
indexes/faiss_Damas/: index.faiss  index.pkl
indexes/faiss_Futuros_ENGENHEIROS/: index.faiss  index.pkl
indexes/faiss_Pessoas_De_70_Anos/: index.faiss  index.pkl
indexes/faiss_Xadrez/: index.faiss  index.pkl
reels-pipeline/: .gitignore  README-reels-pipeline.md  download-reels.py  gemini_summary.py  pdf_generator.py  resumo_video.py  webdriver-download-test.ipynb  youtube_workflow.py
