[project]
name = "whatsapp-stream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper==1.2.0",
    "kokoro==0.9.4",
    "numpy==2.3.4",
    "onnxruntime==1.23.2",
    "scipy>=1.16.2",
    "sounddevice>=0.5.3",
]
